basic/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: website
  labels:
    svc: website
spec:
  selector:
    tier: website
  ports:
  - protocol: TCP
    port: 80
    name: http
  - protocol: TCP
    port: 9000
    name: metric
