basic/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: 80

  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: 80
